# FFmpegVideoRange2

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpegvideorange2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/ffmpegvideorange2/: App.kt  DisplayUtils.java  FileListActivity.kt  FileListAdapter.java  ImageViewBitmapBean.kt  MainActivity.java  (+14 more)
app/src/main/res/layout/: activity_file_list.xml  activity_main.xml  activity_preview_frame.xml  activity_range_time_line.xml  activity_time_line.xml  activity_video_range.xml  item_file_list_name.xml  item_preview_img.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
myplayer/: build.gradle
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/cpp/: AVFrameQueue.cpp  AVFrameQueue.h  CMakeLists.txt  FAvFrameHelper.cpp  FAvFrameHelper.h  JavaCallHelper.cpp  JavaCallHelper.h  KzgAudio.cpp  KzgAudio.h  KzgFFmpeg.cpp  KzgFFmpeg.h  KzgPlayerStatus.cpp  KzgPlayerStatus.h  KzgVideo.cpp  KzgVideo.h  SafeQueue.cpp  SafeQueue.h  log.h  native-lib.cpp
myplayer/src/main/cpp/include/libavcodec/: avcodec.h  bsf.h  codec.h  codec_desc.h  codec_id.h  codec_par.h  packet.h  version.h
myplayer/src/main/cpp/include/libavformat/: avformat.h  avio.h  version.h
myplayer/src/main/cpp/include/libavutil/: common.h  ffversion.h  pixfmt.h
myplayer/src/main/cpp/include/libswresample/: version.h
myplayer/src/main/cpp/include/libswscale/: version.h
myplayer/src/main/cpp/mediametadataretriever/: Errors.h  Mutex.h  ffmpeg_mediametadataretriever.c  ffmpeg_mediametadataretriever.h  ffmpeg_utils.c  ffmpeg_utils.h  mediametadataretriever.cpp  mediametadataretriever.h  wseemann_media_MediaMetadataRetriever.cpp
myplayer/src/main/cpp/sliceheaderparse/: ErrorInfo.h  Global.h  NALUnit.cpp  NALUnit.h  PicParamSet.cpp  PicParamSet.h  SeqParamSet.cpp  SeqParamSet.h  SliceHeader.cpp  SliceHeader.h  SliceStruct.cpp  SliceStruct.h  Stream.cpp  Stream.h  Utils.cpp  Utils.h  stdafx.cpp  stdafx.h
myplayer/src/main/cpp/soundtouch/SoundTouch/: AAFilter.h  FIFOSampleBuffer.cpp  FIRFilter.h  InterpolateCubic.cpp  InterpolateCubic.h  InterpolateLinear.h  InterpolateShannon.cpp  InterpolateShannon.h  RateTransposer.h  SoundTouch.cpp  TDStretch.cpp  TDStretch.h  cpu_detect.h  cpu_detect_x86.cpp  sse_optimized.cpp
myplayer/src/main/cpp/soundtouch/include/: STTypes.h
myplayer/src/main/java/wseemann/media/: FFmpegMediaMetadataRetriever.java
myplayer/src/main/res/drawable/: bright_progress.xml  bright_thumb.xml  selector_play_details.xml
myplayer/src/main/res/layout/: layout_video_range.xml  layout_view_pre_item.xml  video_track_layout.xml  view_media_player.xml
myplayer/src/main/res/raw/: fragment_mediacodec.glsl  fragment_shader.glsl  vertex_shader.glsl
timeLine/: build.gradle
timeLine/src/main/: AndroidManifest.xml
timeLine/src/main/res/drawable/: shape_video_edit_filter_place_bg.xml  tag_select_white_border_corners.xml  video_edit__tip_circle_bg.xml  video_edit__tip_circle_bg_16dp.xml  video_edit__tip_line_bg_gradient.xml  video_item_index_bg.xml  video_item_placeholder.xml
timeLine/src/main/res/layout/: activity_start.xml  item_tag_img.xml  item_tag_text.xml  item_video_frame.xml
timeLine/src/main/res/values/: attrs.xml  colors.xml  strings.xml  video_edit_tag_color_res.xml
(+104 files in other folders)
